fix: add logout and refresh apis
